# listen

./: .gitignore  README.md  create_service_role.sh  install-extension.sh  main.py  pyproject.toml
functions/cleaner/: main.py  pyproject.toml
functions/completed/: main.py  pyproject.toml
functions/download/: main.py  pyproject.toml  requirements.txt
functions/merge/: main.py  pyproject.toml
functions/rss/: main.py  pyproject.toml  requirements.txt
functions/tts/: main.py  pyproject.toml  requirements.txt
functions/upload/: main.py  pyproject.toml  requirements.txt
listen-listener/: background.js  config.json  manifest.json  options.html  options.js
terraform/: .terraform.lock.hcl  check_gcloud.py  iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/chrome_vm/: chrome-remote.sh  desktop-config.json.tpl  main.tf  outputs.tf  patch-background.sh  queue_processor.py  reconnect.ps1.tpl  reconnect.sh.tpl  setup-chrome-vm.sh  variables.tf
terraform/modules/dns_check/: main.tf
terraform/modules/endpoints/: main.tf  openapi-schema.yml  outputs.tf  variables.tf
terraform/modules/functions/: main.tf  outputs.tf  variables.tf
terraform/modules/http/: character_count.sql  listen_table.sql  main.tf  outputs.tf  variables.tf
terraform/modules/postgres/: migrations.sql  provider.tf  resource.tf  variables.tf
terraform/modules/postgresql/: outputs.tf  provider.tf  resource.tf  variables.tf
terraform/modules/supabase/: bucket.sql  index.sql  main.tf  outputs.tf  provider.tf  variables.tf
vm/: pyproject.toml  queue_processor.py
(+11 files in other folders)
