[project]
dependencies = [
    "flask>=3.1.1",
    "functions-framework>=3.9.2",
    "google-cloud-logging>=3.12.1",
    "google-cloud-pubsub>=2.31.1",
    "supabase>=2.18.0",
]
description = "A personal podcaster from the Listen tab group in Chrome"
name = "personal-podcast"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = ["dotenv>=0.9.9"]

[tool.uv.workspace]
members = [
    "functions/cleaner",
    "functions/download",
    "functions/rss",
    "functions/tts",
    "functions/upload",
    "vm",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools,terraform}/*" = ["F401", "I001"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
